--- a/index.html
+++ b/index.html
@@ -6,7 +6,42 @@
   </head>
   <body>
     <h1>Javascript exercises</h1>
-
-    <script src="./index.js"></script>
+    <h3><a href="/variables/index.html">Variable exercise</a></h3>
+    <h3>
+      <a href="/conditionalExpression/index.html">Conditional expressions</a>
+    </h3>
+    <h3>
+      <a href="/sortArray/index.html">Sorting array</a>
+    </h3>
+    <h3>
+      <a href="/Loop/index.html">Loops</a>
+    </h3>
+    <h3>
+      <a href="/findNumbers/index.html"
+        >Finding biggest and lowest numbers in an array</a
+      >
+    </h3>
+    <h3>
+      <a href="/findDuplicate/index.html"
+        >Finding duplicate elements in an array</a
+      >
+    </h3>
+    <h3>
+      <a href="/convertArrayToString/index.html">Converting array to string</a>
+    </h3>
+    <h3>
+      <a href="/reverseNumber/index.html">Reversing number</a>
+    </h3>
+    <h3>
+      <a href="/sortString/index.html">Sorting string alphabetically</a>
+    </h3>
+    <h3>
+      <a href="/convertStringTouppercase/index.html"
+        >Converting first letter in string to uppercase</a
+      >
+    </h3>
+    <h3>
+      <a href="/FindLongestWord/index.html">Finding longest word in a string</a>
+    </h3>
   </body>
 </html>
