form submission using DOM

--- a/index.html
+++ b/index.html
@@ -1,47 +1,123 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Js exercises</title>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="/node_modules/materialize-css/dist/css/materialize.min.css"
+      media="screen,projection"
+    />
+    <title>Form submission</title>
   </head>
   <body>
-    <h1>Javascript exercises</h1>
-    <h3><a href="/variables/index.html">Variable exercise</a></h3>
-    <h3>
-      <a href="/conditionalExpression/index.html">Conditional expressions</a>
-    </h3>
-    <h3>
-      <a href="/sortArray/index.html">Sorting array</a>
-    </h3>
-    <h3>
-      <a href="/Loop/index.html">Loops</a>
-    </h3>
-    <h3>
-      <a href="/findNumbers/index.html"
-        >Finding biggest and lowest numbers in an array</a
-      >
-    </h3>
-    <h3>
-      <a href="/findDuplicate/index.html"
-        >Finding duplicate elements in an array</a
-      >
-    </h3>
-    <h3>
-      <a href="/convertArrayToString/index.html">Converting array to string</a>
-    </h3>
-    <h3>
-      <a href="/reverseNumber/index.html">Reversing number</a>
-    </h3>
-    <h3>
-      <a href="/sortString/index.html">Sorting string alphabetically</a>
-    </h3>
-    <h3>
-      <a href="/convertStringTouppercase/index.html"
-        >Converting first letter in string to uppercase</a
-      >
-    </h3>
-    <h3>
-      <a href="/FindLongestWord/index.html">Finding longest word in a string</a>
-    </h3>
+    <div class="container">
+      <div class="container">
+        <h4 class="header">Javascript exercises</h4>
+        <ul class="collapsible">
+          <li>
+            <div class="collapsible-header">
+              <a href="/variables/index.html">Variable exercise</a>
+              <span id="name" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a href="/conditionalExpression/index.html"
+                >Conditional expressions</a
+              >
+              <span id="email" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a href="/sortArray/index.html">Sorting array</a>
+              <span id="phone" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a href="/Loop/index.html">Loops</a>
+              <span id="phone" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a href="/findNumbers/index.html"
+                >Finding biggest and lowest numbers in an array</a
+              >
+              <span id="phone" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a href="/findDuplicate/index.html"
+                >Finding duplicate elements in an array</a
+              >
+              <span id="phone" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a href="/convertArrayToString/index.html"
+                >Converting array to string</a
+              >
+              <span id="phone" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a href="/reverseNumber/index.html">Reversing number</a>
+              <span id="phone" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a href="/sortString/index.html">Sorting string alphabetically</a>
+              <span id="phone" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a>Converting first letter in string to uppercase</a>
+              <span id="phone" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a href="/FindLongestWord/index.html"
+                >Finding longest word in a string</a
+              >
+              <span id="phone" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a href="/createListItem/index.html"
+                >Creating list item using DOM</a
+              >
+              <span id="phone" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a href="/createTable/index.html">Creating table using DOM</a>
+              <span id="phone" class="badge"></span>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              <a href="/Form/index.html">Submitting form with JS</a>
+              <span id="phone" class="badge"></span>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
